bug: fix Discover text alignment

--- a/static/styles/video.css
+++ b/static/styles/video.css
@@ -88,6 +88,7 @@ body, h1, h2, h3, p, ul, li {
   
   .video video {
     width: 100%;
+    /* margin-top: 20px; */
     margin-bottom: 15px;
   }
   
@@ -117,7 +118,6 @@ body, h1, h2, h3, p, ul, li {
   .discover h2 {
     font-size: 24px;
     font-weight: bold;
-    margin-top: 20px;
     margin-bottom: 10px;
     color: #ffffff;
   }
